--- a/index.html
+++ b/index.html
@@ -11,7 +11,24 @@
     <div class="container">
         <div class="love">
             <h2>Feliz aniversário <span>Sayu</span></h2>
-            <a href="text.html">>></a>
+            <div class="yes">
+			<p>
+                Não há palavras o suficiente que já foram ditas que poderiam te descrever. <br> 
+                Então apenas deixo aqui esta mensagem eternizada para que sempre possa ver. <br> <br>
+                Você é o meu anjo, que se encontra em meu pensamento a cada segundo. <br>
+                Uma volta em nossa estrela, mostrando desta vez que você é meu mundo. <br> <br>
+
+                Hoje você é a pessoa mais importante que mora em meu coração. <br>
+                E que mesmo distante, seu sorriso é a minha única inspiração. <br> <br>
+
+                Deixo assim com todo o carinho essa carta que está a se despedir. <br>
+                Mesmo que as palavras possam não ter sido o suficiente. Obrigado por existir. <br> <br>
+
+                
+                    
+            </p>
+			<img src="kisspng-love-heart-love-heart-romance-clip-art-picture-of-red-heart-5aaeb718420cb8.8640685015213995762706.png" alt=""><img src="kisspng-love-heart-love-heart-romance-clip-art-picture-of-red-heart-5aaeb718420cb8.8640685015213995762706.png" alt=""><img src="kisspng-love-heart-love-heart-romance-clip-art-picture-of-red-heart-5aaeb718420cb8.8640685015213995762706.png" alt="">
+		</div>
         </div>
     </div>
 </body>
