--- a/text.html
+++ b/text.html
@@ -9,8 +9,8 @@
 <body>
 	<div class="container">
 		<div class="yes">
+			<p>Existem poucas palavras no mundo que poderiam te descrever. </p>
 			<img src="kisspng-love-heart-love-heart-romance-clip-art-picture-of-red-heart-5aaeb718420cb8.8640685015213995762706.png" alt=""><img src="kisspng-love-heart-love-heart-romance-clip-art-picture-of-red-heart-5aaeb718420cb8.8640685015213995762706.png" alt=""><img src="kisspng-love-heart-love-heart-romance-clip-art-picture-of-red-heart-5aaeb718420cb8.8640685015213995762706.png" alt="">
-
 		</div>
 	</div>
 </body>
